Updated description for google and Typo in AboutPage

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     <meta name="theme-color" content="#ffffff" />
 
     <title>Donnie Fan Comedy</title>
+    <meta
+      name="description"
+      content="Donnie Fan is a Beijing based comedian and writer from NYC USA. Get updates on showtimes and get tickets here!"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
