--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-TileColor" content="#f4c203" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>Donnie Fan Comedy</title>
+    <title>Donnie Fan - Comedy in Beijing</title>
     <meta
       name="description"
       content="Donnie Fan is a Beijing based comedian and writer from NYC USA. Get updates on showtimes and get tickets here!"
